cargo-features = ["codegen-backend"]

[workspace]
members = [
    "monmon-impl",
    "monmon-dbg", 
    "monmon-proc",
]
default-members = ["monmon-dbg"]

resolver = "2"

[profile.dev]
debug = 0
opt-level = 0
codegen-backend = "cranelift"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[workspace.lints.clippy]
pedantic = "deny"
nursery  = "deny"

