cargo-features = ["codegen-backend"]

[workspace]
members = [
    "monmon-impl",
    "monmon-dbg", 
    "monmon-proc",
]
default-members = ["monmon-dbg"]

resolver = "2"

[profile.dev]
debug = 0
opt-level = 0
codegen-backend = "cranelift"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[workspace.lints.rust]
unused                        = "deny"
dead_code                     = "deny"
missing_debug_implementations = "warn"
future_incompatible           = "warn"
nonstandard_style             = "warn"

[workspace.lints.clippy]
pedantic = "warn"
nursery  = "warn"

