cargo-features = ["codegen-backend"]

[workspace]
members = [
    "monmon-impl",
    "monmon-dbg", 
    "monmon-proc",
]
default-members = ["monmon-dbg"]

resolver = "2"

[profile.dev]
debug = 0
opt-level = 0
codegen-backend = "cranelift"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[workspace.lints.rust]
# Groups go first with priority = -1 so individual-lint overrides win.
unused              = { level = "deny", priority = -1 }
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style   = { level = "warn", priority = -1 }
# Individual lints (priority 0 by default).
dead_code                     = "deny"
# missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
# Force `.expect("why")` over `.unwrap()` so panics carry an explanation.
unwrap_used = "deny"

